--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -1,8 +1,6 @@
 [[contact-methods-saltbundle]]
 = Salt Bundle
 
-
-
 == What is Salt Bundle?
 
 The Salt Bundle is a single binary package containing {salt} Minion, Python 3, required Python modules, and libraries.
@@ -14,7 +12,7 @@ It is also possible to use the Salt Bundle on systems that run a {salt} Minion c
 
 
 
-== Client Registration with Salt Bundle as a Minion
+== Client Registration With Salt Bundle as a Minion
 
 The registration method with the Salt Bundle is the recommended registration method.
 This section explains the advantages and limitations of the current implementation.
@@ -29,7 +27,7 @@ If you switch, the [package]``salt-minion`` package and its dependencies will st
 
 
 [[contact-methods-saltbundle-using]]
-=== Using the {salt} Bundle with the {salt} Minion
+=== Using the {salt} Bundle With the {salt} Minion
 
 The {salt} Bundle can be used with the {salt} Minion managed by the {salt} Master other than {productname} Server at the same time.
 If the Salt Bundle is installed on a client {productname} Server will manage the configuration files of the Salt Bundle, the configuration files of [literal]``salt-minion`` will not be managed in this case.
@@ -42,12 +40,13 @@ For more information, see xref:client-configuration:registration-cli.adoc#_salt_
   For more information, see xref:specialized-guides:salt/salt-states-and-pillars.adoc[].
 ====
 
-=== Switching from {salt} Minion to Salt Bundle
+
+=== Switching From {salt} Minion to Salt Bundle
 
 The {salt} state [literal]``util.mgr_switch_to_venv_minion`` is available to switch from [package]``salt-minion`` to [package]``venv-salt-minion``.
 It is recommended to switch to [package]``venv-salt-minion`` in two steps to avoid trouble with shifting processes:
 
-.Procedure: Switching with [literal]``util.mgr_switch_to_venv_minion`` state to [package]``venv-salt-minion``
+.Procedure: SwitchingWwith [literal]``util.mgr_switch_to_venv_minion`` State to [package]``venv-salt-minion``
 
 . Apply [literal]``util.mgr_switch_to_venv_minion`` with no pillar specified first.
   This will result in the switch to [package]``venv-salt-minion`` with copying configuration files etc.
@@ -75,7 +74,8 @@ In this case, specify one of these options:
 * Set [literal]``AVOID_VENV_SALT_MINION`` to [literal]``1`` in the generated bootstrap script.
 * For bootstrap state set the [literal]``mgr_avoid_venv_salt_minion`` pillar to  [literal]``True``.
 
-== SSH Push with the Salt Bundle
+
+== SSH Push With the Salt Bundle
 
 The Salt Bundle is also used when performing SSH Push actions to clients.
 
@@ -102,7 +102,7 @@ Set [option]``web.ssh_use_salt_thin`` to `true` in the [path]``/etc/rhn/rhn.conf
 
 
 
-== Extend Salt Bundle with Python packages using pip
+== Extend Salt Bundle With Python Packages using [literal]``pip``
 
 The Salt Bundle includes [literal]``pip`` to make it possible to extend the functionality of the bundled {salt} Minion with extra Python packages.
 
