--- a/modules/client-configuration/pages/snippets/check_sync_cli.adoc
+++ b/modules/client-configuration/pages/snippets/check_sync_cli.adoc
@@ -1,4 +1,4 @@
-.Procedure: Checking Synchronization Progress from the Command Prompt
+.Procedure: Checking Synchronization Progress From the Command Prompt
 . At the command prompt on the {productname} Server, as root, use the [command]``tail`` command to check the synchronization log file:
 +
 ----
