--- a/modules/client-configuration/pages/snippets/check_sync_webui_suma.adoc
+++ b/modules/client-configuration/pages/snippets/check_sync_webui_suma.adoc
@@ -1,4 +1,4 @@
-.Procedure: Checking Synchronization Progress from the {webui}
+.Procedure: Checking Synchronization Progress From the {webui}
 . In the {productname} {webui}, navigate to menu:Admin[Setup Wizard] and select the [guimenu]``Products`` tab.
   This dialog displays a completion bar for each product when they are being synchronized.
 . Alternatively, you can navigate to menu:Software[Manage > Channels], then click the channel associated to the repository.
