--- a/modules/client-configuration/pages/snippets/check_sync_webui_uyuni.adoc
+++ b/modules/client-configuration/pages/snippets/check_sync_webui_uyuni.adoc
@@ -1,3 +1,3 @@
-.Procedure: Checking Synchronization Progress from the {webui} 
+.Procedure: Checking Synchronization Progress From the {webui} 
 . In the {productname} {webui}, navigate to menu:Software[Manage > Channels], then click the channel associated to the repository.
 . Navigate to the [guimenu]``Repositories`` tab, then click [guimenu]``Sync`` and check [systemitem]``Sync Status``.
