--- a/modules/client-configuration/pages/snippets/managing_appstreams.adoc
+++ b/modules/client-configuration/pages/snippets/managing_appstreams.adoc
@@ -1,4 +1,4 @@
-.Procedure: Managing enabled AppStream modules
+.Procedure: Managing Enabled AppStream Modules
 . In the {productname} {webui}, navigate to menu:Systems[Software > AppStreams].
 . From the table of module streams, select the streams to be enabled on the client.
 . Click btn:[Apply Changes].
