--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -28,7 +28,7 @@ If a user configures an own GPG key to sign the metadata as described in "Use Yo
 ====
 
 
-=== User defined GPG keys
+=== User Defined GPG Keys
 
 Users can define custom GPG keys to be deployed to a client.
 
@@ -61,6 +61,7 @@ The keys are deployed to the client at [path]``/etc/pki/rpm-gpg/my_first_gpg.key
 The last step is to add the URL to the GPG key URL field of the software channel.
 Navigate to menu:Software[Manage > Channels] and select the channel you want to modify.
 Add to [guimenu]``GPG key URL`` the value [literal]``file:///etc/pki/rpm-gpg/my_first_gpg.key``.
+
 
 === GPG Keys in Bootstrap Scripts
 
