Revert "Clean-up."
This reverts commit f1d71d17c8d9b222dfbd7732fd3e572c0a6ad156.

--- a/modules/client-configuration/pages/bootstrap-repository.adoc
+++ b/modules/client-configuration/pages/bootstrap-repository.adoc
@@ -30,20 +30,25 @@ include::snippets/check_sync_cli.adoc[]
 You can change how the automated bootstrap repository creation works.
 This section details the various settings.
 
+
+
+.Flush Mode::
 Flush Mode::
 By default, existing repositories are updated only with the latest packages.
 You can configure it to always start with an empty repository instead.
 To enable this behavior, add or edit this value in [path]``/etc/rhn/rhn.conf``:
-+
+
 ----
 server.susemanager.bootstrap_repo_flush = 1
 ----
 
+
+.Automatic Mode::
 Automatic Mode::
 
 By default, automated regeneration of the bootstrap repositories is enabled.
 To disable it, add or edit this value in [path]``/etc/rhn/rhn.conf``:
-+
+
 ----
 server.susemanager.auto_generate_bootstrap_repo = 0
 ----
