--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -17,8 +17,12 @@ The icons in this table indicate:
 * {cross} clients running this operating system are not supported by {suse}
 * {question} clients are under consideration, and may or may not be supported at a later date.
 
+[NOTE]
+====
 Client operating system versions and SP levels must be under general support (normal or LTSS) to be supported with {productname}.
 For details on supported product versions, see https://www.suse.com/lifecycle.
+====
+
 
 [IMPORTANT]
 ====
