--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -16,7 +16,9 @@ It is also possible to use the Salt Bundle on systems that run a {salt} Minion c
 
 The registration method with the Salt Bundle is the recommended registration method.
 This section explains the advantages and limitations of the current implementation.
+
 The Salt Bundle is provided as the [package]``venv-salt-minion`` that consists of {salt}, Python 3, and the Python modules {salt} depends on.
+
 Bootstrapping with {webui} is using Salt Bundle as well, so bootstrapping with {webui} is not Python dependant.
 Using the Salt Bundle, it is no longer needed that the client provides any Python interpreter or modules.
 
@@ -62,17 +64,20 @@ This second step ensures the first step was processed, and then removes the old 
 salt <minion_id> state.apply util.mgr_switch_to_venv_minion pillar='{"mgr_purge_non_venv_salt_files": True, "mgr_purge_non_venv_salt": True}'
 ----
 
-[WARNING]
-====
-In case of running the second step of switching with skipping the first step, state apply process could fail as it requires stopping the [systemitem]``salt-minion`` which is used to execute the command on the client side.
-====
 
-On the other hand, it is also possible to avoid installing the Salt Bundle and keep using [package]``salt-minion`` instead.
-In this case, specify one of these options:
+=== Additional Concerns
 
-* Execute [command]``mgr-bootstrap`` with  [option]``--no-bundle`` option.
-* Set [literal]``AVOID_VENV_SALT_MINION`` to [literal]``1`` in the generated bootstrap script.
-* For bootstrap state set the [literal]``mgr_avoid_venv_salt_minion`` pillar to  [literal]``True``.
+//[WARNING]
+//====
+* In case of running the second step only and the first step, state apply process could fail as it requires stopping the [systemitem]``salt-minion`` which is used to execute the command on the client side.
+//====
+
+* It is also possible to avoid installing the Salt Bundle and keep using [package]``salt-minion`` instead.
+  In this case, specify one of these options:
+
+** Execute [command]``mgr-bootstrap`` with  [option]``--no-bundle`` option.
+** Set [literal]``AVOID_VENV_SALT_MINION`` to [literal]``1`` in the generated bootstrap script.
+** For bootstrap state set the [literal]``mgr_avoid_venv_salt_minion`` pillar to  [literal]``True``.
 
 
 == SSH Push With the Salt Bundle
