--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -1,6 +1,8 @@
 [[registering.clients.bootstrap]]
 = Register Clients With a Bootstrap Script
 
+== Introduction
+
 Registering clients with a bootstrap script gives you control over parameters, and can help if you have to register a large number of clients at once.
 
 To register clients using a bootstrap script, we recommend you create a template bootstrap script to begin, which can then be copied and modified.
@@ -10,14 +12,17 @@ Some parameters in the bootstrap script ensure the client system can be assigned
 It is important that you check the repository information carefully, to ensure it matches the base channel repository.
 If the repository information does not match exactly, the bootstrap script cannot download the correct packages.
 
-[NOTE]
-====
-All clients need a bootstrap repository.
-It is automatically created and regenerated on the {productname} Server when products are synchronized.
-A bootstrap repository includes packages for installing {salt} on clients, and for registering clients.
+Additional considerations:
 
-For more information about creating a bootstrap repository, see xref:client-configuration:bootstrap-repository.adoc[].
-====
+* All clients need a bootstrap repository.
+  It is automatically created and regenerated on the {productname} Server when products are synchronized.
+  A bootstrap repository includes packages for installing {salt} on clients, and for registering clients.
+  For more information about creating a bootstrap repository, see xref:client-configuration:bootstrap-repository.adoc[].
+
+* openSUSE Leap 15 and SLE 15 use Python 3 by default.
+  Bootstrap scripts based on Python 2 must be re-created for openSUSE Leap 15 and SLE 15 systems.
+  If you register openSUSE Leap 15 or SLE 15 systems using Python 2, the bootstrap script fails.
+
 
 ifeval::[{uyuni-content} == true]
 
@@ -30,12 +35,6 @@ When you create your bootstrap script, add a path to the file containing the pub
 
 endif::[]
 
-[NOTE]
-====
-openSUSE Leap 15 and SLE 15 use Python 3 by default.
-Bootstrap scripts based on Python 2 must be re-created for openSUSE Leap 15 and SLE 15 systems.
-If you register openSUSE Leap 15 or SLE 15 systems using Python 2, the bootstrap script fails.
-====
 
 ifeval::[{suma-content} == true]
 
