(HW2024 cleanup) Admonitions' review - Client Registration Files (#3473)
* More clean-up.

* Cont.

* Tidied up client registration via Web UI file.

* Cont.

* Cont.

* Cont.

--- a/modules/client-configuration/pages/registration-cli.adoc
+++ b/modules/client-configuration/pages/registration-cli.adoc
@@ -2,16 +2,20 @@
 = Register Clients on the Command Line
 
 
-== Manual Client Registration
+//== Manual Client Registration
+== Introduction
 
-In most cases, Salt clients are registered accurately with the default bootstrap methods.
-However, you can use Salt to register the client to the {productname} Server manually by editing the Salt minion file on the client, and providing the fully qualified domain name (FQDN) of the server.
-This method uses ports 4505 and 4506 inbound to the server.
-This method requires no configuration on the {productname} Server aside from ensuring that these ports are open.
+{salt} clients are registered accurately with the default bootstrap methods in most cases.
 
-This procedure requires that you have installed the [package]``venv-salt-minion`` (Salt bundle) or the [package]``salt-minion`` package on the Salt client before registration.
-Both use configuration files in different locations and filenames remain the same.
-The systemd service filename is different.
+However, you can use {salt} to register the client to the {productname} Server manually by editing the {salt} minion file on the client, and providing the fully qualified domain name (FQDN) of the server.
+
+This method:
+ 
+* uses ports 4505 and 4506 inbound to the server.
+* requires no configuration on the {productname} Server aside from ensuring that these ports are open.
+* requires that you have installed the [package]``venv-salt-minion`` (Salt bundle) or the [package]``salt-minion`` package on the Salt client before registration.
+  Both use configuration files in different locations and filenames remain the same.
+  The [literal]``systemd`` service filename is different.
 
 [WARNING]
 ====
@@ -26,13 +30,10 @@ Bootstrapping this way will only work if you use the [package]``salt-minion`` be
 * [path]``/etc/venv-salt-minion/minion``
 * [path]``/etc/venv-salt-minion/minion.d/NAME.conf``
 * systemd service file: [path]``venv-salt-minion.service``
-
++
 For more information about the Salt bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[Salt Bundle].
 
-
-
 .Procedure: Registering Clients with Salt Bundle Configuration File
---
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
 +
@@ -69,7 +70,6 @@ systemctl restart venv-salt-minion
 ----
 salt-key -a '<client>'
 ----
---
 
 
 == Client Configuration
@@ -82,7 +82,6 @@ Client ([package]``salt-minion``)::
 * systemd service file: [path]``salt-minion.service``
 
 .Procedure: Registering Clients with Salt Minion Configuration File
---
 . On the Salt client, open the [literal]``minion`` configuration file.
   The configuration file is either located at:
 +
@@ -120,6 +119,5 @@ systemctl restart salt-minion
 ----
 salt-key -a '<client>'
 ----
---
 
-For more information about the Salt minion configuration file, see https://docs.saltstack.com/en/latest/ref/configuration/minion.html.
+For more information about the Salt minion configuration file, see https://docs.saltproject.io/en/latest/contents.html[Salt Project Documentation].
