--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -12,17 +12,17 @@ Clients use packages to install, uninstall, and upgrade software.
 //     Non Compliant
 
 
-[IMPORTANT]
-====
-When packages are installed or upgraded, licenses or EULAs are automatically accepted.
-====
-
 To manage packages on a client, navigate to [guimenu]``Systems``, click the client to manage, and navigate to the menu:Systems[Software > Packages] subtab.
 The options available in this section vary depending on the type of client you have selected, and its current channel subscriptions.
 
 Most package management actions can be added to action chains.
 For more about action chains, see xref:reference:schedule/action-chains.adoc[].
 
+
+[IMPORTANT]
+==== 
+When packages are installed or upgraded, licenses or EULAs are automatically accepted.
+====
 
 
 == Compare Packages Using Profiles
@@ -35,12 +35,10 @@ Profiles are created from the packages on a currently installed client.
 When the profile has been created, you can use it to install more clients with the same packages installed.
 
 
-
 .Procedure: Creating a Stored Profile
 . In the {productname} {webui}, navigate to [guimenu]``Systems``, click the client to base your profile off, and navigate to the menu:Systems[Software > Packages > Profiles] subtab.
 . Click btn:[Create System Profile].
 . Type a name and description for your profile and click btn:[Create Profile].
-
 
 
 .Procedure: Comparing Client Packages
@@ -57,7 +55,6 @@ Orphaned packages are packages synchronized by {productname} that are not associ
 Therefore, orphaned packages are usually not available to {productname} clients and users cannot install such packages without additional effort.
 
 A package can become orphaned as a result of one of the following events:
-
 
 * A synchronized repository removes a package.
   By default, {productname} unlinks such a package from the channel, but does not remove the package.
@@ -80,16 +77,14 @@ Delete orphaned packages:
 
 // * With the UI (FIXME is this possible?  How?
 
-* with command line tools targeting individual packages; for example:
+* with command line tools targeting individual packages. For example:
 +
-
 ----
 spacecmd package_remove zypper-1.14.52-150400.1.9.x86_64
 ----
 
 * with command line tools targeting all orphaned packages at once:
 +
-
 ----
 spacecmd package_removeorphans
 ----
