--- a/modules/client-configuration/pages/power-management.adoc
+++ b/modules/client-configuration/pages/power-management.adoc
@@ -1,6 +1,8 @@
 [[power-management]]
 = Power Management
 
+== Introduction
+
 You can power on, power off, and reboot clients using the {productname} {webui}.
 
 This feature uses either the IPMI or Redfish protocol and is managed using a {cobbler} profile.
@@ -8,7 +10,7 @@ The selected client must have a power management controller supporting one of th
 
 For Redfish, ensure you can establish a valid SSL connection between the client and the {productname} Server.
 You must have trusted the certificate authority used to sign the SSL Server Certificate of the Redfish management controller.
-The CA certificate must be in ``.pem`` format, and stored on the {productname} Server at [path]``/etc/pki/trust/anchors/``.
+The CA certificate must be in [literal]``.pem`` format, and stored on the {productname} Server at [path]``/etc/pki/trust/anchors/``.
 When you have saved the certificate, run [command]``update-ca-certificate``.
 
 
