--- a/modules/client-configuration/pages/system-locking.adoc
+++ b/modules/client-configuration/pages/system-locking.adoc
@@ -30,7 +30,7 @@ The locking mechanism is not available for {salt} SSH clients.
     In this case, a banner in the {webui} notifies you.
     The client remains locked until you remove the system lock formula.
 
-For more information about blackout mode in {salt}, see https://docs.saltstack.com/en/latest/topics/blackout/index.html.
+For more information about blackout mode in {salt}, see https://docs.saltproject.io/en/latest/topics/blackout.
 
 
 
