--- a/modules/client-configuration/pages/system-set-manager.adoc
+++ b/modules/client-configuration/pages/system-set-manager.adoc
@@ -1,18 +1,20 @@
 [[ssm]]
 = System Set Manager
 
+== Introduction
+
 The system set manager (SSM) is used to perform actions on more than one client at a time.
 SSM creates ephemeral sets of clients, making it useful for one-off actions that you need to apply to a number of clients.
 If you want more permanent sets, consider using system groups instead.
 For more information about system groups, see xref:client-configuration:system-groups.adoc[].
 
-
-The actions available for use in SSM are listed in this table.
+The actions available for use in SSM are listed in table.
 The icons in this table indicate:
 
 * {check} this action is available in SSM for this client type
 * {cross} this action is not available in SSM for this client type
 * {question} this action is under consideration for this client type, and may or may not be supported at a later date.
+
 
 .Available SSM Actions
 [cols="1,1", options="header"]
