--- a/modules/client-configuration/pages/package-management.adoc
+++ b/modules/client-configuration/pages/package-management.adoc
@@ -12,17 +12,17 @@ Clients use packages to install, uninstall, and upgrade software.
 //     Non Compliant
 
 
-[IMPORTANT]
-====
-When packages are installed or upgraded, licenses or EULAs are automatically accepted.
-====
-
 To manage packages on a client, navigate to [guimenu]``Systems``, click the client to manage, and navigate to the menu:Systems[Software > Packages] subtab.
 The options available in this section vary depending on the type of client you have selected, and its current channel subscriptions.
 
 Most package management actions can be added to action chains.
 For more about action chains, see xref:reference:schedule/action-chains.adoc[].
 
+
+[IMPORTANT]
+==== 
+When packages are installed or upgraded, licenses or EULAs are automatically accepted.
+====
 
 
 == Compare Packages Using Profiles
@@ -35,12 +35,10 @@ Profiles are created from the packages on a currently installed client.
 When the profile has been created, you can use it to install more clients with the same packages installed.
 
 
-
 .Procedure: Creating a Stored Profile
 . In the {productname} {webui}, navigate to [guimenu]``Systems``, click the client to base your profile off, and navigate to the menu:Systems[Software > Packages > Profiles] subtab.
 . Click btn:[Create System Profile].
 . Type a name and description for your profile and click btn:[Create Profile].
-
 
 
 .Procedure: Comparing Client Packages
@@ -58,10 +56,8 @@ Therefore, orphaned packages are usually not available to {productname} clients 
 
 A package can become orphaned as a result of one of the following events:
 
-
 * A synchronized repository removes a package.
-  By default, {productname} 5.0 unlinks such package from the channel, but does not remove the package.
-  In {productname} 4.3, you can enable this behavior by using the [literal]``strict mode`` channel configuration.
+  By default, {productname} unlinks such a package from the channel, but does not remove the package.
 * A repository supersedes a package with a newer version and thus removes the previous version.
 * The reposync process got interrupted (for example, because of an out of space exception) and thus downloaded packages were not associated with a channel.
 * Users manually uploaded packages, but did not associate them with any channel.
@@ -69,11 +65,11 @@ A package can become orphaned as a result of one of the following events:
 Orphaned packages cost space in user environment and cannot be easily distributed to clients because they are not associated with a channel.
 Orphaned package can make sense with specific workflows like bootstrapping or customer-specific procedures.
 
-You can view orphaned packages in the {webui} by clicking menu:Software[Manage > Packages > view Packages in no channel]
+You can view orphaned packages in the {webui} by clicking menu:Software[Manage > Packages > view Packages in no channel].
 
-{productname} periodically runs a taskomatic job that searches for orphaned packages and modifies the package organization ID to 1.
+{productname} periodically runs a taskomatic job that searches for orphaned packages and modifies the package organization ID to 1.
 This means that you can delete orphaned packages only after the taskomatic job execution.
-If you encounter an orphaned package that you cannot delete, wait 24 hours and try the deletion again.
+If you encounter an orphaned package that you cannot delete, wait 24 hours and try the deletion again.
 
 // .Procedure: Deleting orphaned packages
 
@@ -81,17 +77,14 @@ Delete orphaned packages:
 
 // * With the UI (FIXME is this possible?  How?
 
-* with command line tools targeting individual packages.
-  For example:
+* with command line tools targeting individual packages. For example:
 +
-
 ----
 spacecmd package_remove zypper-1.14.52-150400.1.9.x86_64
 ----
 
 * with command line tools targeting all orphaned packages at once:
 +
-
 ----
 spacecmd package_removeorphans
 ----
