Formatting and use of parameters in the public cloud files.

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -60,7 +60,7 @@ Clients using Satellite certificates are not supported with {productname} Server
 
 [IMPORTANT]
 ====
-The PAYG connection regular checks with the client to get the latest authentication data.
+The {payg} connection regular checks with the client to get the latest authentication data.
 It is important that the client stays running and is regular updated.
 If this does not happen, repository synchronization will fail with authentication errors at some point in time.
 ====
