--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -13,4 +13,4 @@ After creation:
 Connect your system to your own running RMT or {productname} infrastructure in the same way you connect systems in your data center.
 
 {byos} instances make it easier to manage extensions such as ``LTSS`` or ``kernel live-patching``.
-Extensions for PAYG instances can only be used in conjunction with {productname}.
+Extensions for {payg} instances can only be used in conjunction with {productname}.
