--- a/modules/specialized-guides/pages/public-cloud-guide/byos/setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/setup.adoc
@@ -17,8 +17,8 @@ In this method, you subscribe to a public cloud service, and install {productnam
 You will need to have {suse} product entitlements before you begin.
 You can do this by following all the same instructions as you would for any local {productname} installation.
 
-On-demand {sles} pay as you go (PAYG) image::
-Most public cloud providers make {sles} available as a BYOS image.
+On-demand {sles} {payglongform} ({payg}) image::
+Most public cloud providers make {sles} available as a {byos} image.
 This means that {sles} is pre-installed, and you can install {productname} on top, using the {unifiedinstaller}.
 You can do this by following all the same instructions as you would for any local {productname} installation.
 You will need to have {suse} product entitlements before you begin.
