--- a/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-general.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/faq/faq-billing-general.adoc
@@ -27,7 +27,7 @@ When purchasing {productname} via the {availability} Marketplaces, the billing i
 
 == I have existing SLES for SAP instances procured via the cloud provider marketplace, is there a cost to manage these instance with {productname} {payg}?
 
-SLES for SAP Applications PAYG/on-demand instances, when purchased via the cloud marketplace, include Lifecycle Management(LCM) entitlements for {productname}.
+SLES for SAP Applications {payg}/on-demand instances, when purchased via the cloud marketplace, include Lifecycle Management(LCM) entitlements for {productname}.
 
 The {productname} {payg} billing engine recognizes the embedded LCM entitlements and does not include them in the count. This means there are no additional charges to manage these with the {productname} {payg} listing.
 
