--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -1,29 +1,30 @@
 = {payg} Client connections and Client Registration
 
-== Managing connections and registering PAYG and BYOS images
+== Managing connections and registering {payg} and BYOS images
 
-PAYG (Pay-As-You-Go) Images::
-Connecting and registering PAYG images is supported and can be done without additional prerequisites.
+{payg} ({payglongform}) Images::
+Connecting and registering {payg} images is supported and can be done without additional prerequisites.
 
 
-BYOS (Bring Your Own Subscription) Images::
-Registering BYOS images requires SCC (SUSE Customer Center) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
+{byos} ({byoslongform}) Images::
+Registering BYOS images requires SCC ({scc}) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
 
 [IMPORTANT]
 ====
-* Always verify the type of image (PAYG or BYOS) prior to initiating the registration process with {productname} to ensure a smooth and error-free connection.
+* Always verify the type of image ({payg} or {byos}) prior to initiating the registration process with {productname} to ensure a smooth and error-free connection.
 
 * If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
 
-**Do not** register PAYG instances with the SUSE Customer Center.
-Only BYOS instances should be registered against the SUSE Customer Center.
+**Do not** register {payg} instances with the {scc}.
+Only {byos} instances should be registered against the {scc}.
 
-**Registering PAYG instances with the SUSE Customer Center or your own RMT server will create conflicts that are not easily solved**.  PAYG instances are automatically registered against the correct update server when added to your cloud service provider {productname} instance.
+**Registering {payg} instances with the {scc}  or your own RMT server will create conflicts that are not easily solved**.  
+{payg} instances are automatically registered against the correct update server when added to your cloud service provider {productname} instance.
 ====
 
 
 
-== Starting up additional {payg} {suse} products in {aws}
+== Starting Up Additional {payg} {suse} products in {aws}
 
 For more information on using {suse} {payg} products such as {sle} in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
 
@@ -32,18 +33,22 @@ For more information on using {suse} {payg} products such as {sle} in the public
 
 [IMPORTANT]
 ====
-It is important to recognize that there is a difference between **{payglongform} connections** and **bootstrapping**. Bootstrapping is also known as **client registration**.
+It is important to recognize that there is a difference between **{payglongform} connections** and **bootstrapping**. 
+Bootstrapping is also known as **client registration**.
 
-Once you have started up your {productname} {payg} instance and refreshed products you can add **{payglongform} connections** via the menu:Admin[Setup Wizard > Pay-as-you-go] btn:[+Add Pay-as-you-go] button. This action links your {productname} {payg} instance with additional {payg} products on {aws}. 
+Once you have started up your {productname} {payg} instance and refreshed products you can add **{payglongform} connections** via the menu:Admin[Setup Wizard > Pay-as-you-go] btn:[+Add Pay-as-you-go] button. 
+This action links your {productname} {payg} instance with additional {payg} products on {aws}. 
 
-**Bootstrapping** or **client registration** is the process of onboarding clients in {productname}. The registration process installs the appropriate client tools and provides full management functionality.
+**Bootstrapping** or **client registration** is the process of onboarding clients in {productname}. 
+The registration process installs the appropriate client tools and provides full management functionality.
 
-To manage your clients, start by **establishing connections** and then proceed to **bootstrap** your clients. These two actions are the steps required for initiating and completing the client onboarding process.
+To manage your clients, start by **establishing connections** and then proceed to **bootstrap** your clients. 
+These two actions are the steps required for initiating and completing the client onboarding process.
 ====
 
-.Procedure: Connecting {sle} {payg} instances to {productname} {payg}
+.Procedure: Connecting {sle} {payg} Instances to {productname} {payg}
 
-. Return to the SUSE Manager Server WebUI.
+. Return to the SUSE Manager Server {webui}.
 
 . Navigate to menu:Admin[Setup Wizard > Pay-as-you-go] and click the btn:[+Add Pay-as-you-go] button.
 
