--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
@@ -1,25 +1,30 @@
-= SUSE Manager {payg} WebUI setup 
-
+= SUSE Manager {payg} {webui} Setup 
 
 == Requirements
 
-{productname} must be setup and running on {azure}. For more information on finding and setting up {productname}, see xref:specialized-guides:public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc[Azure Public Cloud Images].
+{productname} must be setup and running on {azure}. 
+For more information on finding and setting up {productname}, see xref:specialized-guides:public-cloud-guide/payg/azure/payg-azure-public-cloud-images.adoc[Azure Public Cloud Images].
 
 
-.The instance-flavor-check tool and {payg} schedule check 
+.The instance-flavor-check Tool and {payg} Schedule Check 
 [NOTE]
 ====
 instance-flavor-check Tool::
-The **instance-flavor-check** tool is an essential component that comes pre-installed by default. Its presence is crucial, as it determines the status of PAYG instances. When invoked, this tool identifies and categorizes the system as a PAYG instance. By default this tool is configured to run on a schedule named **update-payg-default**.
+The **instance-flavor-check** tool is an essential component that comes pre-installed by default. 
+Its presence is crucial, as it determines the status of {payg} instances. 
+When invoked, this tool identifies and categorizes the system as a {payg} instance. 
+By default this tool is configured to run on a schedule named **update-payg-default**.
 
 update-payg-default schedule task::
-Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** task. By default, this task is set to run at 10-minute intervals. Its primary function is to monitor the presence of all running PAYG instances by executing the **instance-flavor-check tool**.
+Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** task. 
+By default, this task is set to run at 10-minute intervals. 
+Its primary function is to monitor the presence of all running {payg} instances by executing the **instance-flavor-check tool**.
 ====
 
 
-== Login to the Webui
+== Log in to the {webui}
 
-.Procedure: Login
+.Procedure: Logging in
 . Login to the {productname} Server {webui}.
   The username is [literal]``admin`` while the password is the name of the instance with [literal]``-suma`` appended.
   When the name of the instance is [literal]``suma-payg-mycompany``, the password is ``suma-payg-mycompany-suma``.
