--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -17,8 +17,8 @@ Users can leverage images of {productname} on a {payglongform} basis, paying onl
 . Obtaining a SUSE Manager Server Subscription (optional)
 [IMPORTANT]
 ====
-For customers running 10 or more PAYG SLES for SAP Applications instances who also wish to access the SUSE Manager (SUMA) BYOS Lifecycle subscription, an email must be sent to susemanagerkey@suse.com. 
-The email should include proof of at least 10 active SLES for SAP PAYG instances, such as a screenshot of the relevant section of their cloud console. 
+For customers running 10 or more {payg} SLES for SAP Applications instances who also wish to access the SUSE Manager (SUMA) BYOS Lifecycle subscription, an email must be sent to susemanagerkey@suse.com. 
+The email should include proof of at least 10 active SLES for SAP {payg} instances, such as a screenshot of the relevant section of their cloud console. 
 The subscription key is valid for one year and can be renewed by providing updated proof of the instances at the end of the subscription period.
 ====
 
