Revert "Formatting and use of parameters in the public cloud files."
This reverts commit 69d8188d978b3738d3bf76a7c5f5091d32404b84.

--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -1,14 +1,14 @@
-= {byos} Guide
+= BYOS Guide
 
-== {byoslongform} ({byos})
+== Bring your own subscription (BYOS)
 
 {byoslongform} ({byos}) images are useful if you already have a support contract with SUSE and want to move your workloads to the public cloud.
 An instance launched from a {byos} image is equivalent to a physical machine that just received a SUSE Linux Enterprise Server installation from the {sles} installation image.
 
 After creation:
 
-* use [command]``registercloudguest`` to register the instance with the SUSE-operated update infrastructure in the cloud framework, or
-* use [command]``SUSEConnect`` to register the system with {scc} using the entitlements you already have.
+* use ``registercloudguest`` to register the instance with the SUSE-operated update infrastructure in the cloud framework, or
+* use the command ``SUSEConnect`` to register the system with {scc} using the entitlements you already have.
 
 Connect your system to your own running RMT or {productname} infrastructure in the same way you connect systems in your data center.
 
