--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -1,20 +1,19 @@
-= {payg} Client Connections and Client Registration
+= {payg} Client connections and Client Registration
 
-== Managing Connections and Registering {payg} and {byos} images
+== Managing connections and registering {payg} and BYOS images
 
 {payg} ({payglongform}) Images::
 Connecting and registering {payg} images is supported and can be done without additional prerequisites.
 
 
 {byos} ({byoslongform}) Images::
-Registering {byos} images requires SCC ({scc}) credentials beforehand. 
-If a user attempts to onboard a {byos} image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
+Registering BYOS images requires SCC ({scc}) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
 
 [IMPORTANT]
 ====
 * Always verify the type of image ({payg} or {byos}) prior to initiating the registration process with {productname} to ensure a smooth and error-free connection.
 
-* If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing {byos} images.
+* If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
 
 **Do not** register {payg} instances with the {scc}.
 Only {byos} instances should be registered against the {scc}.
