Formatting and use of parameters in the public cloud files.

--- a/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/byos-overview.adoc
@@ -1,6 +1,6 @@
-= BYOS Guide
+= {byos} Guide
 
-== Bring your own subscription (BYOS)
+== {byoslongform} ({byos})
 
 {byoslongform} ({byos}) images are useful if you already have a support contract with SUSE and want to move your workloads to the public cloud.
 An instance launched from a {byos} image is equivalent to a physical machine that just received a SUSE Linux Enterprise Server installation from the {sles} installation image.
